Yarn added axios, and made get request to the rest countries API

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -26,3 +26,5 @@ $ratio-16-x-9: 56.3% 0 0;
 // Utilities
 $box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1);
 $gtr: 20px;
+$gtr-hlf: $gtr / 2;
+$gtr-dbl: $gtr * 2;
