Added reset button to filters

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,12 +4,14 @@
 // Colors
 $c-cod-grey: #1a1a1a;
 $c-cod-grey-tr-8: rgba(26, 26, 26, 0.8);
+$c-cod-grey-tr-2: rgba(26, 26, 26, 0.2);
 $c-pickled-bluewood: #35495e;
 $c-ocean-green: #43b883;
 $c-ocean-green-tr-6: rgba(67, 184, 131, 0.6);
 $c-ocean-green-tr-2: rgba(67, 184, 131, 0.2);
 $c-white: #fff;
 $c-white-tr-8: rgba(255, 255, 255, 0.8);
+$c-white-tr-2: rgba(255, 255, 255, 0.2);
 $c-rose: #fd1d7c;
 $c-dodger-blue: #5468ff;
 $c-dodger-blue-tr-6: rgba(84, 104, 255, 0.6);
